# QtExample

./: .dockerignore  .gitignore  AGENTS.md  API_TESTING_GUIDE.md  API_TEST_README.md  API_TEST_REPORT.md  BUILD_ALL_PLATFORMS_GUIDE.md  CLEANUP_SUMMARY.md  CMakeLists-enterprise-test.txt  CMakeLists-enterprise.txt  CMakeLists-lite.txt  CMakeLists-simple.txt  CMakeLists-src.txt  CMakeLists-test.txt  CMakeLists.txt  COMPLETE_API_TEST_REPORT.md  CROSS_PLATFORM_RELEASE_README.md  DOCKER-README.md  DOCKER-SETUP.md  DOCKER-字体配置说明.md  DOCKER-打开说明.md  Docker-镜像加速配置.md  Dockerfile  Dockerfile.cn  EGGJS_ANALYTICS_BACKEND.md  FINAL_API_COMMANDS.md  FINAL_COMPLETE_API_TEST_REPORT.md  FINAL_SOLUTION_SUMMARY.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  Info.plist.in  PIPELINE_DETECTION_GUIDE.md  PROJECT_DOCUMENTATION.md  QT_FRONTEND_TODO.md  README-DOCKER-FIX.md  README-DOCKER.md  README.md  RELEASE_AUTOMATION_SUMMARY.md  THEME_BUTTON_SYNC_FIX.md  THEME_SYNC_COMPLETE_FIX.md  WINDOWS-构建说明.md  (+77 more)
.cursor/commands/: commit.md
.cursor/rules/: commit-commands.mdc
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release-lite.yml  release.md  release.yml  tag.md
advancedcontrols/: CMakeLists.txt  advancedcontrols.pro  advancedcontrolstab.cpp  advancedcontrolstab.h
analytics/: CMakeLists.txt  analytics.cpp  analytics.h  analytics.pro
app/: app.pro
basiccontrols/: CMakeLists.txt  basiccontrols.pro  basiccontrolstab.cpp
changepasswordpage/: CMakeLists.txt  changepasswordpage.cpp  changepasswordpage.h  changepasswordpage.pro
datadisplay/: CMakeLists.txt  datadisplay.pro  datadisplaytab.cpp
dialogs/: CMakeLists.txt  dialogs.pro  dialogstab.h
docs/: DOCKER.md  FILE_ORGANIZATION.md  README-模板使用说明.md
docs/api/: SERVER_API_REFERENCE.md  USER_PROFILE_API.md
docs/development/: CROSS_PLATFORM_UI_OPTIMIZATION.md  ENTERPRISE_ARCHITECTURE_PLAN.md  ENTERPRISE_TRANSFORMATION_SUMMARY.md  MIGRATION_SUMMARY.md  PROJECT_MIGRATION_TO_SRC.md  THEME_FIXES.md  THEME_SWITCHING_FIX.md  webengine-compatibility-summary.md  windows-compatibility.md  跨平台兼容性说明.md
docs/docker/: Qt-Docker-通用开发指南.md  X11-SETUP.md
docs/release/: RELEASE_AUTOMATION_SUMMARY.md  WINDOWS_RELEASE_GUIDE.md
docs/templates/: Dockerfile.template
docs/troubleshooting/: PIPELINE_DETECTION_GUIDE.md
echarts/: CMakeLists.txt  echarts.pro  echartstab.cpp  echartstab.h  logstatstab.cpp  logstatstab.h
echarts/ECharts/: chart.html
layoutexamples/: CMakeLists.txt  layoutexamples.pro  layoutexamplestab.cpp  layoutexamplestab.h
layoutexamples1/: CMakeLists.txt  layoutexamples1.pro  layoutexamplestab1.cpp
layoutexamples2/: CMakeLists.txt  layoutexamplestab2.cpp  layoutexamplestab2.h  layoutexamplestab2.pro
layoutexamples3/: CMakeLists.txt  layoutexamplestab3.cpp  layoutexamplestab3.h  layoutexamplestab3.pro
loginpage/: CMakeLists.txt  loginpage.cpp  loginpage.h  loginpage.pro
networkmanager/: CMakeLists.txt  networkmanager.pro
reportstab/: CMakeLists.txt  reportstab.cpp  reportstab.h  reportstab.pro
scripts/: update-translations.sh
scripts/docker/: check-docker-setup.sh  docker-build-and-run.sh  fix-build-cache.sh  fix-docker-sharing.sh  open-docker.sh  verify-docker-sharing.sh
scripts/release/: create-lite-tag.sh  recreate-tag.sh
scripts/setup/: setup-remotes.sh
scripts/test/: check-pipeline.sh  show-build-options.sh  test-windows-compatibility.bat
scripts/windows/: complete-release-windows.ps1  fix-all-windows-dll.ps1  fix-windows-webengine.ps1  package-local.ps1  test-windows-package.ps1
src/: CMakeLists.txt  src.pro
src/Analytics/: CMakeLists.txt  README.md  analytics.cpp  analytics.h  analytics.pro  example.cpp
src/App/: CMakeLists.txt  app.pro  common.h  main.cpp
src/Auth/: CMakeLists.txt  ILoginView.h  LoginController.cpp  LoginController.h  auth.pro  changepasswordpage.cpp  changepasswordpage.pro  loginpage.cpp  loginpage.h  loginpage.pro
src/Charts/: CMakeLists.txt  charts.pro  echarts.pro  echartstab.cpp  echartstab.h  logstatstab.cpp
src/Core/: Application.cpp  Application.h  Application.inl  DependencyContainer.cpp  DependencyContainer.h  ServiceManager.cpp  ServiceManager.h  core.pro
src/Device/: CMakeLists.txt  Device.pro  contenttab.cpp  contenttab.h  serverconfigtab.cpp  serverconfigtab.h  test_webview.cpp
src/ECharts/: server_config.html
src/Interfaces/: IAuthenticationService.h  INetworkService.h  interfaces.pro  interfaces_dummy.cpp
src/Localization/: LocalizationManager.cpp  LocalizationManager.h  localization.pro
src/Localization/translations/: app_en_US.ts  app_ja_JP.ts  app_ko_KR.ts  app_zh_CN.ts
src/Network/: CMakeLists.txt  network.pro  networkmanager.cpp
src/Reports/: CMakeLists.txt  reports.pro  reportstab.cpp  reportstab.h  reportstab.pro
src/Services/: AnalyticsService.cpp  AnalyticsService.h  AuthenticationService.cpp  AuthenticationService.h  NetworkService.cpp  NetworkService.h  services.pro
src/Styles/: CMakeLists.txt  modern_theme.h  styles.pro  theme_manager.cpp
src/UI/: CMakeLists.txt  mainuiwindow.cpp  mainuiwindow.h  ui.pro
src/UserProfile/: CMakeLists.txt  editprofilewidget.cpp  editprofilewidget.h  userinfo.pro  userinfopage.cpp  userinfopage.h  userprofile.pro  userprofiletab.cpp  userprofiletab.h  userprofiletab.pro
src/Utils/: CMakeLists.txt  avatar_utils.cpp  logger.cpp  logger.h  utils.pro
styles/: styles.pro  theme_manager.cpp  theme_manager.h
userinfo/: CMakeLists.txt  userinfo.pro  userinfopage.cpp  userinfopage.h
userprofiletab/: CMakeLists.txt  userprofiletab.cpp  userprofiletab.h  userprofiletab.pro
utils/: avatar_utils.cpp  avatar_utils.h
